--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "cypress-file-upload": "^5.0.8"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cypess:runChorome":"cypress run --browser chrome --spec cypress/integration/Clientes_estandar/Ayvi.js"
+                         
   },
   "repository": {
     "type": "git",
