iteraciones con parametros en array

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "Dashboard": "cypress run --record --key 382664da-873f-4482-b339-c9704fd25755",
-    "estres": "cypress run --browser chrome --spec cypress/integration/Pruebas_estres/insertarCitas.js"
+    "estres": "cypress run --browser chrome --spec cypress/integration/Pruebas_estres/insertarCitas.js",
+    "cypess:runAyvi":"cypress run --browser chrome --spec cypress/integration/Clientes_estandar/Ayvi.js"
   },
   "keywords": [
     "rutinas"
