--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "codigo con rutinas",
   "main": "index.js",
   "scripts": {
+    "open": "cypress open",
     "test": "echo \"Error: no test specified\" && exit 1",
     "Dashboard": "cypress run --record --key 382664da-873f-4482-b339-c9704fd25755",
     "estres": "cypress run --browser chrome --spec cypress/integration/Pruebas_estres/insertarCitas.js"
